--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["CLASSNAME", "INSTA", "instakilogram"]
+  "cSpell.words": ["CLASSNAME", "INSTA", "instakilogram", "Tetris"]
 }
