instakilogram 댓글이 보이지 않는 오류 수정

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["CLASSNAME", "INSTA", "instakilogram", "Tetris"]
+  "cSpell.words": [
+    "CLASSNAME",
+    "donghyun",
+    "dongvely",
+    "imgs",
+    "INSTA",
+    "instadaily",
+    "instagood",
+    "instakilogram",
+    "Tetris"
+  ]
 }
