--- a/개인연습페이지/package.json
+++ b/개인연습페이지/package.json
@@ -18,5 +18,6 @@
   "homepage": "https://github.com/websteak/jsStudyChrome#readme",
   "dependencies": {
     "express": "^4.18.1"
-  }
+  },
+  "type": "module"
 }
